SERVER-81106 Wait for changes to catalog cache to be persisted before cloning phase